fix: mobile stations not showing

--- a/src/app/mrt-map.css
+++ b/src/app/mrt-map.css
@@ -596,6 +596,11 @@ ul.stations.left-spot.dt-names.dts32-35 li:nth-child(3) {
   margin-bottom: 25px;
 }
 span.expo {
+  /* inline-block, not plain inline: a large negative margin on an inline
+   * text run collapses the anchor's content box in Safari and the name
+   * fails to paint. An atomic inline-block box keeps the same layout but
+   * always renders. */
+  display: inline-block;
   margin-left: -64px;
 }
 ul.stations.left-spot.dt-names.dts29-21 {
@@ -638,6 +643,7 @@ ul.stations.left-spot.dt-names.dts29-21 li:nth-child(5):before {
   margin-left: -183px;
 }
 span.mattar {
+  display: inline-block;
   margin-left: -74px;
 }
 ul.stations.left-spot.dt-names.dts29-21 li:nth-child(6) {
@@ -649,6 +655,7 @@ ul.stations.left-spot.dt-names.dts29-21 li:nth-child(6):before {
   margin-left: -223px;
 }
 span.geylang-bahru {
+  display: inline-block;
   margin-left: -130px;
 }
 ul.stations.left-spot.dt-names.dts29-21 li:nth-child(7) {
@@ -735,9 +742,11 @@ ul.stations.left-spot.dt-names.dts1-9 li:nth-child(9) a span.station-nr.small {
   margin-left: -34px;
 }
 span.stevens {
+  display: inline-block;
   margin-left: -40px;
 }
 span.tan-kah-kee {
+  display: inline-block;
   margin-left: -54px;
 }
 .bus.dt1 {
@@ -1004,6 +1013,7 @@ ul.stations.left-spot.cc-names.ccs14-ce2 li:nth-child(5) {
   margin-bottom: 80px;
 }
 span.macphearson {
+  display: inline-block;
   margin-left: -127px;
 }
 ul.stations.left-spot.cc-names.ccs14-ce2 li:nth-child(5):before {
@@ -1155,6 +1165,7 @@ ul.stations.right-spot.cc-names.ccs20-22 li:after {
   margin-left: 4px;
 }
 span.station-lorong-chuang {
+  display: inline-block;
   margin-left: -32px;
 }
 ul.stations.left-spot.cc-names li:before,
@@ -1361,6 +1372,7 @@ ul.stations.left-spot.ne-names.nes17-7 li:nth-child(1):before {
   margin-left: 363px;
 }
 span.punggol {
+  display: inline-block;
   margin-left: -91px;
 }
 ul.stations.left-spot.ne-names.nes17-7 li:nth-child(2) {
@@ -1371,6 +1383,7 @@ ul.stations.left-spot.ne-names.nes17-7 li:nth-child(2):before {
   margin-left: 260px;
 }
 span.sengkang {
+  display: inline-block;
   margin-left: -102px;
 }
 ul.stations.left-spot.ne-names.nes17-7 li:nth-child(3) {
@@ -1381,6 +1394,7 @@ ul.stations.left-spot.ne-names.nes17-7 li:nth-child(3):before {
   margin-left: 229px;
 }
 span.buangkok {
+  display: inline-block;
   margin-left: -100px;
 }
 ul.stations.left-spot.ne-names.nes17-7 li:nth-child(4) {
@@ -1952,15 +1966,12 @@ ul.stations.left-spot.ew-names.ews21-15 li:nth-child(5):before {
   margin-left: 167px;
 }
 ul.stations.left-spot.ew-names.ews21-15 span.tiong-bahru {
-  /* A large negative margin on an inline element can make the anchor's
-   * content box collapse to zero width in Safari, which then fails to
-   * paint the text at all. Take it out of flow instead so it always
-   * renders regardless of the anchor's computed width. */
-  position: absolute;
-  left: -114px;
-  top: 0;
-  margin-left: 0;
-  white-space: nowrap;
+  /* inline-block, not plain inline: a large negative margin on an inline
+   * text run collapses the anchor's content box in Safari and the name
+   * fails to paint. An atomic inline-block box keeps the same layout but
+   * always renders. */
+  display: inline-block;
+  margin-left: -114px;
 }
 ul.stations.left-spot.ew-names.ews21-15 li:nth-child(6) {
   margin-left: 215px;
@@ -1969,6 +1980,7 @@ ul.stations.left-spot.ew-names.ews21-15 li:nth-child(6):before {
   margin-left: 211px;
 }
 ul.stations.left-spot.ew-names.ews21-15 span.outram-park {
+  display: inline-block;
   margin-left: -132px;
 }
 ul.stations.left-spot.ew-names.ews21-15 li:nth-child(7) {
